media query added

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
   <!-- Start Main Content Part 2-->
 
   <div class="main-content" id="main">
-    <div class="left"  id="#left">
+    <div class="left"  id="left">
       <div class="main-taitel">
         <h5><a href="#"> <i class="fa-solid fa-film"></i> Anime Episode</a></h5>
         <h5><a href="#" class="watch-all"> Watch All</a></h5>
@@ -871,7 +871,7 @@
   <div class="right" id="Series">
     <div class="main-taitel" >
       <h5 id="movies"><a href="#"> <i class="fa-solid fa-tv"></i> Series</a></h5>
-      <h5 class="paragraphe">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, mollitia.</h5>
+      <h5 class="paragraphe">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h5>
       <h5><a href="#" class="watch-all"> Watch All</a></h5>
     </div>
     <div class="all-anime">
@@ -1132,10 +1132,10 @@
           <div class="screen-body-item left">
             <div class="app-title">
               <span>About US</span>
-              <p id="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur voluptatem magnam aliquid quia accusamus officiis doloribus nihil obcaecati voluptatum. At eum dignissimos ratione tempora facilis architecto voluptatibus nostrum recusandae quis.</p>
-              <p id="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur voluptatem magnam aliquid quia accusamus officiis doloribus nihil obcaecati voluptatum. At eum dignissimos ratione tempora facilis architecto voluptatibus nostrum recusandae quis.</p>
             </div>
-            <div class="app-contact">CONTACT INFO : +212 662 76 90 10</div>
+            <p id="aboutt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur voluptatem magnam aliquid quia accusamus officiis doloribus nihil obcaecati voluptatum. At eum dignissimos ratione tempora facilis architecto voluptatibus nostrum recusandae quis.</p>
+            <p id="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur voluptatem magnam aliquid quia accusamus officiis doloribus nihil obcaecati voluptatum. At eum dignissimos ratione tempora facilis architecto voluptatibus nostrum recusandae quis.</p>
+            <div class="app-contact" id="num">CONTACT INFO : +212 662 76 90 10</div>
           </div>
           <div class="screen-body-item">
             <div class="app-form">
